--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     <div id="carta" class="section">
       <h2>La Chica De Los Ojos Bonitos kkjsd</h2>
       <p>
-        Jamás pensé que alguien como tú se volviera tan valiosa para mí, sin imaginarlo te volviste demasiado importante e influyente en mi vida que cada segundo de tu tiempo me hacía tan feliz. Desde que volvímos a hablar siempre me aferré a la idea de que estarías en mi vida para siempre, me ilusioné, soñé, hice planes... No te voy a mentir veía una vida contigo. Tal vez fue apresurado y se que la distancia entre tu y yo es mucha pero siempre fue mi plan ir a verte y demostrarte en persona cuanto me gustas Melanie. Se que capaz hubo situaciones o momentos en los que para los dos fue difícil, has pasado por muchas cosas y eso lo sé, aún así me prometí a mi mismo estar para tí sin importar lo que yo estuviera pasando porque realmente fue tan bonito encajar contigo. Muchos momentos y cosas que no creo poder encontrar en otra persona. Tú hiciste de mi vida estos meses algo increíble y estoy eternamente agradecido contigo por eso, me dejaste amarte y enseñarte cuanto me encantas en todos los aspectos. Tal vez ya no sea tu prioridad actualmente, se que te hace feliz alguien más pero aquí sigo intentandolo ¿sabes?. Siento que eres una chica que vale muchísimo la pena luchar por ella y así me cueste una vida entera recuperarte y exista ese 1% de probabilidad lo intentaré, por tí. Tienes muchas cualidades que te hacen especial, tus gustos por la musica va mas allá y eso habla mucho de tí. Físicamente ni mencionarlo, tienes los ojos mas lindos de esta galaxia que combinan con ese cabello que resalta tu boca y hace de tí para mí y para muchos la flor mas linda del planeta. Doy gracias al destino por haberte puesto en mi camino, gracias por todos los momentos que pasaste a mi lado Melanie, solo te pido que me des la oportunidad de luchar por tí, créeme estoy dándolo todo y daría toda mi vida por tí. Te amo y me encantas en todos los malditos sentidos y no sabes como me llena de celos verte con alguien más kjsdkjs. Aceptame las flores y cuidalas, se supone que deberían ser amarillas por el 21 de Septiembre pero se que el morado combina más contigo y te iban a gustar más. Se me hicieron igual de lindas que tú lkds Te adoro.
+        Jamás pensé que alguien como tú se volviera tan valiosa para mí, sin imaginarlo te volviste demasiado importante e influyente en mi vida que cada segundo de tu tiempo me hacía tan feliz. Desde que volvímos a hablar siempre me aferré a la idea de que estarías en mi vida para siempre, me ilusioné, soñé, hice planes... No te voy a mentir veía una vida contigo. Tal vez fue apresurado y se que la distancia entre tu y yo es mucha pero siempre fue mi plan ir a verte y demostrarte en persona cuanto me gustas Melanie. Se que capaz hubo situaciones o momentos en los que para los dos fue difícil, has pasado por muchas cosas y eso lo sé, aún así me prometí a mi mismo estar para tí sin importar lo que yo estuviera pasando porque realmente fue tan bonito encajar contigo. Muchos momentos y cosas que no creo poder encontrar en otra persona. Tú hiciste de mi vida estos meses algo increíble y estoy eternamente agradecido contigo por eso, me dejaste amarte y enseñarte cuanto me encantas en todos los aspectos. Tal vez ya no sea tu prioridad actualmente, se que te hace feliz alguien más pero aquí sigo intentandolo ¿sabes?. Siento que eres una chica que vale muchísimo la pena luchar por ella y así me cueste una vida entera y exista ese 1% de probabilidad lo intentaré, por tí. Tienes muchas cualidades que te hacen especial, tus gustos por la musica va mas allá y eso habla mucho de tí. Físicamente ni mencionarlo, tienes los ojos mas lindos de esta galaxia que combinan con ese cabello que resalta tu boca y hace de tí para mí y para muchos la flor mas linda del planeta. Doy gracias al destino por haberte puesto en mi camino, gracias por todos los momentos que pasaste a mi lado Melanie, solo te pido que me des la oportunidad de luchar por tí, créeme estoy dándolo todo y daría toda mi vida por tí. Te amo y me encantas en todos los malditos sentidos. Perdón por todo, perdón por no poder darte más, espero en esa otra persona encuentres esa tranquilidad y paz que siempre buscaste.. Aceptame las flores y cuidalas, se supone que deberían ser amarillas por el 21 de Septiembre pero se que el morado combina más contigo y te iban a gustar más. Se me hicieron igual de lindas que tú lkds Te adoro.
       </p>
     </div>
 
@@ -169,17 +169,17 @@
       </div>
 
       <div class="music-item">
-        <p>💙 All I Really Want Is You - TheMarias</p>
+        <p>💙 Hold On, We're Going Home - ArticMonkeys</p>
         <audio controls>
-          <source src="The Marias.mp3" type="audio/mpeg">
+          <source src="artic.mp3" type="audio/mpeg">
           Tu navegador no soporta audio.
         </audio>
       </div>
 
       <div class="music-item">
-        <p>💖 Congratulations  - MacMiller</p>
+        <p>💖 Dime  - Kevin Kaarl</p>
         <audio controls>
-          <source src="Mac Miller.mp3" type="audio/mpeg">
+          <source src="dime.mp3" type="audio/mpeg">
           Tu navegador no soporta audio.
         </audio>
       </div>
@@ -241,3 +241,4 @@
   </script>
 </body>
 </html>
+
